--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   /* align-items: flex-start; */
-  border-bottom: 1px solid var(--spacehub-hover) !important;
+  /* border-bottom: 1px solid var(--spacehub-hover) !important; */
   /* clip-path: polygon(0 0, 100% 0, 100% calc(100% - 6vw), 0 100%); */
 }
 
